--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -5018,6 +5018,17 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 	opacity: 0.9;
 	/* Adjust the opacity as needed */
 }
+.overlay3 {
+	/* Set the overlay properties */
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	backdrop-filter:brightness(0.15) contrast(0.85);	
+	/* opacity: 0.9; */
+	/* Adjust the opacity as needed */
+}
 
 .p-width{
 	width: 85%;
