--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -5007,6 +5007,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 	opacity: 0.9;
 	/* Adjust the opacity as needed */
 }
+
 .overlay2 {
 	/* Set the overlay properties */
 	position: absolute;
@@ -5018,6 +5019,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 	opacity: 0.9;
 	/* Adjust the opacity as needed */
 }
+
 .overlay3 {
 	/* Set the overlay properties */
 	position: absolute;
@@ -5025,14 +5027,29 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	backdrop-filter:brightness(0.15) contrast(0.85);	
+	backdrop-filter: brightness(0.15) contrast(0.85);
 	/* opacity: 0.9; */
 	/* Adjust the opacity as needed */
 }
 
-.p-width{
+.p-width {
 	width: 85%;
 	text-align: justify;
+}
+.insta-icon {
+	position: relative;
+    color: #EB8223;
+	left: 30%;
+    font-size: 90px;
+    float: left;
+}
+
+.vl {
+	border-left: 3px solid #EB8223;
+	height: 94px;
+	position: relative;
+	left: 31.5%;
+	float: left;
 }
 
 @keyframes shake {
