--- a/css/style-core.css
+++ b/css/style-core.css
@@ -818,7 +818,7 @@ input[type="reset"]:focus {
 
 .kingster-top-bar .kingster-top-bar-menu>li>a {
 	display: inline;
-	margin-right: 16px;
+	margin-right: 22px;
 }
 
 .kingster-top-bar .kingster-top-bar-menu>li:last-child>a {
@@ -6203,21 +6203,22 @@ body .tribe-bar-views-inner {
 	color: #333;
 }
 
-.submit-button { 
-	font-size: 15px; 
-	font-weight: bold; 
-	letter-spacing: 0.8px; 
-	padding: 15px; 
-	width: 100%;
-	display: block; -webkit-appearance: none; 
-	background-color:#af938f; 
-	border: 0;
-	color: #fff;
-	font-style: normal !important;
-	cursor: pointer;
-	font-style: normal;
+.submit-button {
+    font-size: 18px !important;
+    font-weight: 500 !important;
+	text-transform: uppercase;	
+    letter-spacing: 0.8px;
+    padding: 15px;
+    width: 100%;
+    display: block;
+    -webkit-appearance: none;
+    background-color: #EB8223 !important;
+    border: 0;
+    color: #fff;
+    font-style: normal !important;
+    cursor: pointer;
+    font-style: normal;
 }
-
 
 .gdlr-core-portfolio-thumbnail-image-wrap img {
 	width: 100%;
