--- a/css/style-core.css
+++ b/css/style-core.css
@@ -729,6 +729,7 @@ input[type="reset"]:focus {
 	--black: #1D1D1D;
 	--grey: #797B80;
 	--green: #3db166;
+	--lightgrey: #ebebeb;
 }
 
 /* End Color Codes */
@@ -739,7 +740,7 @@ input[type="reset"]:focus {
 .study-head {
 	position: relative !important;
 	bottom: 450px;
-	left: 430px;
+	right: 185px;
 }
 
 .border-study {
@@ -775,10 +776,108 @@ input[type="reset"]:focus {
 }
 
 .titles-css {
-	color: var(--orange) !important ;
+	color: var(--orange) !important;
 }
 
 
+/* SUBSCRIPTION BLOCK */
+.subscription-block {
+    width: 75%;
+    display: flex;
+    position: relative;
+    z-index: 2;
+    bottom: -85px;
+    flex-direction: column;
+    justify-content: center;
+    left: 235px;
+}
+
+.subscription-block .image {
+	width: 100%;
+	display: block;
+	margin: 0;
+	position: relative;
+}
+
+.subscription-block .image img {
+	width: 100%;
+	float: left;
+}
+
+.subscription-block .subscribe-box {
+	width: 100%;
+	display: flex;
+	padding: 70px 50px;
+	background: #1B89BC;
+	position: relative;
+	border-radius: 20px;
+}
+
+.subscription-block .subscribe-box:before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	background-size: 90% auto;
+	z-index: 0;
+	opacity: 0.1;
+}
+
+.subscription-block .subscribe-box .inner {
+	display: inline-block;
+	margin: 0 auto;
+	position: relative;
+	z-index: 1;
+}
+
+.subscription-block .subscribe-box h2 {
+	display: inline-block;
+	margin-bottom: 0;
+	color: #fff;
+	font-weight: 500;
+	/* line-height: 56px; */
+	text-align: center;
+	font-size: 1.5rem;
+	float: left;
+}
+
+.subscription-block .subscribe-box form {
+	display: inline-block;
+	margin-left: 20px;
+}
+
+.subscription-block .subscribe-box form input[type=email] {
+	width: 400px;
+	max-width: 100%;
+	height: 56px;
+	border: none;
+	padding: 0 30px;
+	border-radius: 56px;
+	margin-right: 20px;
+	font-weight: 300;
+}
+
+.subscription-block .subscribe-box form input[type=submit] {
+	display: inline-block;
+	height: 56px;
+	line-height: 56px;
+	background: #215BA4;
+	color: white;
+	border: none;
+	padding: 0 40px;
+	font-size: 14px;
+	font-weight: 300;
+	border-radius: 56px;
+	box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.16);
+}
+
+.subscription-block .subscribe-box form input[type=submit]:hover {
+	background: white;
+	color: #215BA4;
+	transition: ease-in-out 0.7s;
+}
 
 
 
@@ -2381,6 +2480,10 @@ body.admin-bar .kingster-fixed-navigation.kingster-style-slide {
 
 .kingster-footer-wrapper .kingster-footer-container {
 	overflow: hidden;
+}
+
+.kingster-footer-container{
+	margin-top: 100px;
 }
 
 .kingster-footer-wrapper .kingster-widget-title {
