--- a/css/style-core.css
+++ b/css/style-core.css
@@ -744,10 +744,10 @@ input[type="reset"]:focus {
 }
 
 .border-study {
-	border-color: var(--green) !important;
+	border-color: var(--orange) !important;
 	border-bottom-width: 5px !important;
 	position: relative;
-	left: 20px;
+	left: 40px;
 	max-width: 285px;
 
 }
@@ -780,6 +780,99 @@ input[type="reset"]:focus {
 	font-size: 30px !important;
 	font-family: 'AvantGarde Bk BT' !important;
 }
+
+
+
+/* End Foundation Studies Page */
+
+/* Start Fashion Design Page */
+
+.h3-css {
+	font-size: 30px !important;
+	font-weight: 500 !important;
+	letter-spacing: 0px;
+	text-transform: none;
+	color: #ffffff !important;
+	text-align: center;
+	line-height: 65px !important;
+}
+
+.h3-css2 {
+	font-weight: 700 !important;
+	letter-spacing: 0px;
+	text-transform: none;
+	text-align: center !important;
+	color: #ffffff !important;
+}
+
+.border-fashion {
+	border-color: var(--orange) !important;
+	border-bottom-width: 5px !important;
+	position: relative;
+	left: 15px;
+	max-width: 285px;
+}
+
+.split-section {
+	padding: 55px 0px 20px 0px;
+	width: 1920px;
+	position: relative;
+	right: 295px;
+	height: 225px;
+}
+
+.fash-overlay {
+	background-color: #e98023bf;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.grid-container {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 50px;
+	margin: 60px 0 60px 0;
+}
+
+.grid-item {
+	display: flex;
+	align-items: center;
+	padding: 10px;
+}
+
+.grid-item img {
+	width: 30px;
+	height: 30px;
+	margin-right: 10px;
+	margin-left: 140px;
+}
+
+.grid-item p {
+	margin: 0;
+	font-size: 25px;
+	font-weight: 500;
+	font-family: 'AvantGarde Bk BT';
+	color: var(--black);
+}
+
+.mrg-top-grid {
+	margin-top: 42px !important;
+}
+
+@media (max-width: 600px) {
+	.grid-container {
+		grid-template-columns: 1fr;
+	}
+}
+
+
+
+
+/* End Fashion Design Page */
+
 
 /* SUBSCRIPTION BLOCK */
 .subscription-block {
