--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -3566,7 +3566,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 .gdlr-core-page-builder-body [data-skin="Column White"] .gdlr-core-skin-caption,
 .gdlr-core-page-builder-body [data-skin="Column White"] .gdlr-core-skin-caption a,
 .gdlr-core-page-builder-body [data-skin="Column White"] .gdlr-core-skin-caption a:hover {
-	color: #a6a6a6
+	color: white
 }
 
 .gdlr-core-page-builder-body [data-skin="Column White"],
