--- a/css/style-core.css
+++ b/css/style-core.css
@@ -797,14 +797,6 @@ input[type="reset"]:focus {
 	line-height: 65px !important;
 }
 
-.h3-css2 {
-	font-weight: 700 !important;
-	letter-spacing: 0px;
-	text-transform: none;
-	text-align: center !important;
-	color: #ffffff !important;
-}
-
 .border-fashion {
 	border-color: var(--orange) !important;
 	border-bottom-width: 5px !important;
@@ -829,6 +821,7 @@ input[type="reset"]:focus {
 	width: 100%;
 	height: 100%;
 }
+
 
 .grid-container {
 	display: grid;
@@ -866,33 +859,90 @@ input[type="reset"]:focus {
 	.grid-container {
 		grid-template-columns: 1fr;
 	}
+
+	.grid-container2 {
+		grid-template-columns: 1fr;
+	}
 }
-
-
 
 
 /* End Fashion Design Page */
 
-/* start contact page */
-.custom-hr{
-	
+
+/* Start Fashion Management Page */
+
+.grid-container2 {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 15px;
+	margin: 60px 0 -45px 0;
 }
-/* end contact page */
+
+.mrg-top {
+	margin-top: -15px !important;
+}
+
+.h3-css2 {
+	font-size: 35px !important;
+	font-weight: 600 !important;
+	letter-spacing: 0px;
+	text-transform: none;
+	color: #ffffff !important;
+	text-align: center;
+	line-height: 52px !important;
+	margin: 0px 0px 0px -260px;
+}
+
+.h3-css-splitter {
+	font-size: 35px !important;
+	font-weight: 600 !important;
+	letter-spacing: 0px;
+	text-transform: none;
+	color: #ffffff !important;
+	text-align: center;
+	line-height: 52px !important;
+}
+
+.border-manage {
+	border-color: var(--orange) !important;
+	border-bottom-width: 5px !important;
+	position: relative;
+	left: -260px;
+	max-width: 400px;
+}
+
+.splitter-img{
+background-size: cover !important;
+background-position-y: 0px !important;
+background-repeat: no-repeat !important;
+}
+
+
+
+
+/* End Fashion Management Page */
+
+
+/* Start Contact Page */
+.custom-hr {}
+
+/* End Contact Page */
 
 
 /* SUBSCRIPTION BLOCK */
 .subscription-block {
-    /* width: 75%; */
-    margin-top: -100px;
-    display: flex;
-    position: relative;
-    z-index: 2;
-    bottom: -85px;
-    flex-direction: column;
-    justify-content: center;
-    /* left: 235px; */
-    margin: 0px 8% 0px 8%;
+	/* width: 75%; */
+	margin-top: -100px;
+	display: flex;
+	position: relative;
+	z-index: 2;
+	bottom: -85px;
+	flex-direction: column;
+	justify-content: center;
+	/* left: 235px; */
+	margin: 0px 8% 0px 8%;
 }
+
 .subscription-block .image {
 	width: 100%;
 	display: block;
