--- a/plugins/goodlayers-core/include/css/page-builder.css
+++ b/plugins/goodlayers-core/include/css/page-builder.css
@@ -111,6 +111,10 @@
 	float: left;
 	width: 33.3333%;
 }
+.gdlr-core-column-20-studies {
+	float: left;
+	width: 50%;
+}
 .gdlr-core-column-20-fund {
 	float: right;
 	width: 33.3333%;
