--- a/plugins/goodlayers-core/include/css/page-builder.css
+++ b/plugins/goodlayers-core/include/css/page-builder.css
@@ -115,6 +115,10 @@
 	float: left;
 	width: 50%;
 }
+.gdlr-core-column-20-design {
+	float: left;
+	width: 50%;
+}
 .gdlr-core-column-20-fund {
 	float: right;
 	width: 33.3333%;
