--- a/css/style-core.css
+++ b/css/style-core.css
@@ -781,11 +781,11 @@ input[type="reset"]:focus {
 	font-family: 'AvantGarde Bk BT' !important;
 }
 
-.mrg-btn{
+.mrg-btn {
 	margin-bottom: -60px;
 }
 
-.mrg-lft{
+.mrg-lft {
 	margin-left: -445px;
 }
 
@@ -795,13 +795,14 @@ input[type="reset"]:focus {
 /* Start Fashion Design Page */
 
 .h3-css {
-	font-size: 30px !important;
-	font-weight: 500 !important;
+	font-size: 35px !important;
+	font-weight: 600 !important;
 	letter-spacing: 0px;
 	text-transform: none;
 	color: #ffffff !important;
 	text-align: center;
 	line-height: 65px !important;
+	margin: 0px 0px 0px 30px;
 }
 
 .border-fashion {
@@ -862,6 +863,13 @@ input[type="reset"]:focus {
 	margin-top: 42px !important;
 }
 
+
+.img-fash {
+	background-size: cover;
+	background-repeat: no-repeat;
+
+}
+
 @media (max-width: 600px) {
 	.grid-container {
 		grid-template-columns: 1fr;
@@ -882,6 +890,13 @@ input[type="reset"]:focus {
 	position: relative !important;
 	bottom: 450px;
 	right: 120px;
+}
+
+.grid-container2 {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 5px;
+	margin: 60px 0 -35px 0;
 }
 
 .h3-css2 {
@@ -913,10 +928,14 @@ input[type="reset"]:focus {
 	max-width: 400px;
 }
 
-.splitter-img{
-background-size: cover !important;
-background-position-y: 0px !important;
-background-repeat: no-repeat !important;
+.splitter-img {
+	background-size: cover !important;
+	background-position-y: 0px !important;
+	background-repeat: no-repeat !important;
+}
+
+.mrg-top {
+	margin-top: -15px !important;
 }
 
 
