--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -1406,7 +1406,7 @@ ul.sf-menu>.menu-item-language li {
 .sf-vertical>li>.sub-menu a:hover,
 .sf-vertical>li>.sub-menu .current-menu-item>a,
 .sf-vertical>li>.sub-menu .current-menu-ancestor>a {
-	color: #223c6c;
+	color: var(--orange);
 }
 
 .sf-menu>li>.sub-menu a:hover,
@@ -4714,9 +4714,16 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 
 #h3_983a_0 {
 	font-size: 29px;
-	font-weight: 700;
+	font-weight: 600;
 	letter-spacing: 0px;
 	text-transform: none;
+}
+
+#h3_983a_22 {
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 0px;
+    text-transform: none;
 }
 
 #div_983a_5 {
@@ -4804,15 +4811,24 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 #h3_983a_3 {
-	font-size: 18px;
+	font-size: 32px;
 	font-weight: 600;
 	letter-spacing: 0px;
 	text-transform: none;
 	color: #EB8223;
 }
+#h3_983a_3b {
+	font-size: 32px;
+	font-weight: 600;
+	letter-spacing: 0px;
+	text-transform: none;
+	color: white;
+}
+
+
 
 #div_983a_20 {
-	font-size: 16px;
+	font-size: 20px;
 	text-transform: none;
 	color: #ffffff;
 }
@@ -4993,11 +5009,11 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 
 .pbtm {
 	padding-bottom: 8px !important;
-	padding-top: 15px !important;
+	padding-top: 25px !important;
 }
 
 .headerlogo {
-	width: 180px;
+	width: 150px;
 }
 
 .overlay {
@@ -5037,7 +5053,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 .p-width {
-	width: 75%;
+	width: 85%;
 	text-align: justify;
 }
 .insta-icon {
@@ -5057,11 +5073,24 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 .igdiv{
-	margin-top: 5%;
+	margin-top: 2%;
     margin-bottom: 8%;
 }
 
 /* index end  */
+
+/* about start  */
+.p-about{
+	color: #000;
+}
+.p-about2{
+	text-align: center !important;
+}
+.centerdiv{
+	display: grid;
+    place-content: center;
+}
+/* about end  */
 
 /* programmes start  */
 .programmes-h5{
@@ -5070,6 +5099,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 	font-size: 1.17rem !important;
 }
 /* programmes end  */
+
 
 /* contact start */
 .labels{
