--- a/plugins/goodlayers-core/include/css/page-builder.css
+++ b/plugins/goodlayers-core/include/css/page-builder.css
@@ -9,7 +9,7 @@
     margin-left: 0px;
     margin-top: 0px;
     margin-bottom: 20px;
-    font-size: inherit;
+    font-size: 1.1rem;
     text-align: justify;
 }
 
