--- a/css/style-core.css
+++ b/css/style-core.css
@@ -1006,6 +1006,14 @@ font-size: 45px !important;
 	place-content: center;
 }
 
+.split-section2 {
+	padding: 55px 0px 20px 0px;
+	width: 1920px;
+	position: relative;
+	right: 295px;
+	height: 617px;
+}
+
 /* End Visual Communication Page */
 
 /* Start Contact Page */
