--- a/css/style-core.css
+++ b/css/style-core.css
@@ -1023,6 +1023,7 @@ font-size: 45px !important;
 
 
 /* SUBSCRIPTION BLOCK */
+
 .subscription-block {
 	/* width: 75%; */
 	margin-top: -100px;
@@ -1127,6 +1128,110 @@ font-size: 45px !important;
 
 
 
+.subscription-block2 {
+	/* width: 75%; */
+	margin-top: -260px !important;
+	display: flex;
+	position: relative;
+	z-index: 2;
+	bottom: -150px;
+	flex-direction: column;
+	justify-content: center;
+	/* left: 235px; */
+	margin: 0px 8% 0px 8%;
+}
+
+.subscription-block2 .image {
+	width: 100%;
+	display: block;
+	margin: 0;
+	position: relative;
+}
+
+.subscription-block2 .image img {
+	width: 100%;
+	float: left;
+}
+
+.subscription-block2 .subscribe-box {
+	width: 100%;
+	display: flex;
+	padding: 70px 50px;
+	background: var(--black);
+	position: relative;
+	border-radius: 20px;
+}
+
+.subscription-block2 .subscribe-box:before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	background-size: 90% auto;
+	z-index: 0;
+	opacity: 0.1;
+}
+
+.subscription-block2 .subscribe-box .inner {
+	display: inline-block;
+	margin: 0 auto;
+	position: relative;
+	z-index: 1;
+}
+
+.subscription-block2 .subscribe-box h2 {
+	display: inline-block;
+	margin-bottom: 0;
+	color: #fff;
+	font-weight: 500;
+	/* line-height: 56px; */
+	text-align: center;
+	font-size: 1.5rem;
+	float: left;
+	line-height: 35px;
+	margin-top: -5px;
+}
+
+.subscription-block2 .subscribe-box form {
+	display: inline-block;
+	margin-left: 20px;
+}
+
+.subscription-block2 .subscribe-box form input[type=email] {
+	width: 400px;
+	max-width: 100%;
+	height: 56px;
+	border: none;
+	padding: 0 30px;
+	border-radius: 56px;
+	margin-right: 20px;
+	font-weight: 300;
+}
+
+.subscription-block2 .subscribe-box form input[type=submit] {
+	display: inline-block;
+	height: 56px;
+	line-height: 56px;
+	background: var(--orange);
+	color: white;
+	border: none;
+	padding: 0 90px;
+	font-size: 14px;
+	font-weight: 400;
+	border-radius: 56px;
+	box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.16);
+}
+
+.subscription-block2 .subscribe-box form input[type=submit]:hover {
+	background: white;
+	color: var(--orange);
+	transition: ease-in-out 0.7s;
+}
+
+
+
 /* Footer CSS */
 
 
@@ -1137,6 +1242,9 @@ font-size: 45px !important;
 	left: 20px;
 }
 
+.mrg-footer{
+	margin-top: 55px;
+}
 
 
 /* End Footer CSS */
