--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -4747,6 +4747,9 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 #div_983a_9 {
 	padding: 90px 0px 200px 0px;
 }
+#div_983a_9a {
+	padding: 90px 0px 60px 0px;
+}
 
 #div_983a_10 {
 	background-color: #202020;
