--- a/css/posts-slider.css
+++ b/css/posts-slider.css
@@ -2,9 +2,9 @@
 }
 
 .gallery-cell {
-    width: 55%;
+    /* width: 55%;
     height: 400px;
-    margin-right: 5%;
+    margin-right: 5%; */
     /* background: #8C8; */
     /* counter-increment: gallery-cell; */
 }
