--- a/css/style-core.css
+++ b/css/style-core.css
@@ -1021,6 +1021,18 @@ font-size: 45px !important;
     margin-top: 2%;
 }
 
+
+.h3-css-vis {
+	font-size: 35px !important;
+	font-weight: 600 !important;
+	letter-spacing: 0px;
+	text-transform: none;
+	color: #ffffff !important;
+	text-align: center;
+	line-height: 65px !important;
+	margin: 0px 0px 0px -45px;
+}
+
 /* End Visual Communication Page */
 
 /* Start Contact Page */
