--- a/css/style-core.css
+++ b/css/style-core.css
@@ -778,7 +778,7 @@ input[type="reset"]:focus {
 .titles-css {
 	color: var(--orange) !important;
 	font-size: 30px !important;
-	font-family: 'AvantGarde Bk BT' !important;
+	font-family: 'ITC Avant Garde Gothic'!important;
 }
 
 .mrg-btn {
