--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -5243,6 +5243,9 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 	color: #000;
 	text-align: center !important;
 }
+.p-about4 {
+	color: #686868;
+}
 
 .centerdiv {
 	display: grid;
