--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -5244,6 +5244,9 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 	text-align: center !important;
 }
 .p-about4 {
+	color: #000;
+}
+.p-about5 {
 	color: #686868;
 }
 
